src/parser.c
#include "parser.h"

#include "allocator.h"
#include "ast.h"
#include "scanner.h"
#include "string_utils.h"

#include <assert.h>
#include <stdarg.h>
#include <stdlib.h>
#include <string.h>
#include <threads.h>

// temp helpers

static Span span_merge(Span a, Span b) {
  (void)b;
  return (Span){.line = a.line,
                .col = a.col,
                .line_end = b.line_end,
                .col_end = b.col_end};
}

// error reporting

static void error_at(Parser *p, Span span, const char *msg) {
  if (p->panic_mode) {
    return;
  }
  p->panic_mode = true;
  diag_error(p->diags, span, "%s", msg);
}

// token navigation

static Token *peek_tok(const Parser *p) { return &p->tokens[p->current]; }

static Token *peek_ahead(const Parser *p, int offset) {
  int idx = p->current + offset;
  if (idx >= p->count) {
    return &p->tokens[p->count - 1]; // EOF
  }
  return &p->tokens[idx];
}

static Token *previous_tok(const Parser *p) {
  return &p->tokens[p->current - 1];
}

static bool check_tok(const Parser *p, TokenType type) {
  return peek_tok(p)->type == type;
}

static bool is_at_end(const Parser *p) { return check_tok(p, TOKEN_EOF); }

static Token *current_tok(const Parser *p) {
  if (is_at_end(p)) {
    return previous_tok(p);
  }
  return peek_tok(p);
}

static Span token_span(const Token *t) {
  return (Span){.line = t->line,
                .col = t->col,
                .line_end = t->line,
                .col_end = t->col + t->lexeme.len};
}

static Span current_tok_span(const Parser *p) {
  if (is_at_end(p)) {
    Token *prev = previous_tok(p);
    return (Span){.line = prev->line,
                  .col = prev->col + 1,
                  .line_end = prev->line,
                  .col_end = prev->col + 1};
  }
  return token_span(peek_tok(p));
}

static Span previous_tok_span(const Parser *p) {
  if (p->current == 0) {
    return (Span){.line = 1, .col = 1, .line_end = 1, .col_end = 1};
  }
  return token_span(previous_tok(p));
}

static Token *advance_tok(Parser *p) {
  if (!is_at_end(p))
    p->current++;
  return previous_tok(p);
}

static bool match_tok(Parser *p, TokenType type) {
  if (!check_tok(p, type)) {
    return false;
  }
  advance_tok(p);
  return true;
}

/*
#define match_any(p, ...)                                                      \
  match_any_impl(p, (TokenType[]){__VA_ARGS__},                                \
                 sizeof((TokenType[]){__VA_ARGS__}) / sizeof(TokenType))
*/

// static bool match_any_impl(Parser *p, const TokenType *types, size_t count) {
//   for (size_t i = 0; i < count; i++) {
//     if (check(p, types[i])) {
//       advance_tok(p);
//       return true;
//     }
//   }

//   return false;
// }

static bool consume_tok(Parser *p, TokenType type, const char *msg) {
  if (check_tok(p, type)) {
    advance_tok(p);
    return true;
  }
  error_at(p, token_span(peek_tok(p)), msg);
  return false;
}

// synchronization

static void sync_to_stmt(Parser *p) {
  p->panic_mode = false;

  while (!is_at_end(p)) {
    // A semicolon ends the broken statement — consume it and stop.
    if (check_tok(p, TOKEN_SEMICOLON)) {
      advance_tok(p);
      return;
    }

    switch (peek_tok(p)->type) {
    case TOKEN_VAR:
    case TOKEN_RETURN:
    case TOKEN_BREAK:
    case TOKEN_CONTINUE:
    case TOKEN_IF:
    case TOKEN_FOR:
    case TOKEN_MATCH:
    // declaration keywords — we've left the block entirely
    case TOKEN_FUN:
    case TOKEN_STRUCT:
    case TOKEN_ENUM:
    case TOKEN_TRAIT:
    case TOKEN_IMPL:
    case TOKEN_PUB:
    case TOKEN_USE:
    case TOKEN_RBRACE: // end of the enclosing block
      return;
    default:
      advance_tok(p);
    }
  }
}

static void sync_to_decl(Parser *p) {
  p->panic_mode = false;

  while (!is_at_end(p)) {
    switch (peek_tok(p)->type) {
    case TOKEN_FUN:
    case TOKEN_STRUCT:
    case TOKEN_ENUM:
    case TOKEN_TRAIT:
    case TOKEN_IMPL:
    case TOKEN_PUB:
    case TOKEN_USE:
    case TOKEN_VAR:
      return;
    default:
      advance_tok(p);
    }
  }
}

// parsing

typedef enum {
  PATH_EXPR, // type args require turbo-fish
  PATH_TYPE, // type args can be written with or without '::'
  PATH_USE,  // stop before '{' for struct patterns
} PathParseMode;

static bool parse_path(Parser *p, PathParseMode mode, Path *out);

static BindingPat parse_binding(Parser *p) {
  if (check_tok(p, TOKEN_IDENT)) {
    Span start = current_tok_span(p);

    Path path;
    if (!parse_path(p, PATH_USE, &path)) {
      return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
    }

    if (match_tok(p, TOKEN_LBRACE)) {
      StringView field_names[16];
      int field_count = 0;

      if (!check_tok(p, TOKEN_RBRACE)) {
        do {
          if (field_count >= 16) {
            error_at(p, current_tok_span(p),
                     "too many fields in struct pattern");
            return (BindingPat){.kind = BIND_POISON,
                                .span = current_tok_span(p)};
          }
          if (check_tok(p, TOKEN_RBRACE)) {
            break;
          }
          if (!consume_tok(p, TOKEN_IDENT,
                           "expected field name in struct pattern")) {
            return (BindingPat){.kind = BIND_POISON,
                                .span = current_tok_span(p)};
          }
          field_names[field_count++] = previous_tok(p)->lexeme;
        } while (match_tok(p, TOKEN_COMMA));

        if (!consume_tok(p, TOKEN_RBRACE,
                         "expected '}' after struct pattern fields")) {
          return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
        }
      }

      BindingPat b = (BindingPat){
          .kind = BIND_STRUCT,
          .span = span_merge(start, previous_tok_span(p)),
          .as.struc.path = path,
          .as.struc.field_names =
              al_alloc(p->al, sizeof(StringView) * field_count),
          .as.struc.field_count = field_count,
      };
      memcpy(b.as.struc.field_names, field_names,
             sizeof(StringView) * field_count);
      return b;
    }

    if (path.count > 1) {
      error_at(p, start, "unexpected path in binding pattern");
      return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
    }

    return (BindingPat){
        .kind = BIND_IDENT,
        .span = path.span,
        .as.ident = path.segments[0].name,
    };
  }

  if (match_tok(p, TOKEN_LPAREN)) {
    // tuple pattern
    StringView names[16];
    int count = 0;

    Token *start_tok = previous_tok(p);

    if (!check_tok(p, TOKEN_RPAREN)) {
      do {
        if (count >= 16) {
          error_at(p, current_tok_span(p),
                   "too many elements in tuple pattern");
          return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
        }
        if (check_tok(p, TOKEN_RPAREN)) {
          break;
        }
        if (!consume_tok(p, TOKEN_IDENT,
                         "expected identifier in tuple pattern")) {
          return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
        }
        names[count++] = previous_tok(p)->lexeme;
      } while (match_tok(p, TOKEN_COMMA));
    }

    if (!consume_tok(p, TOKEN_RPAREN, "expected ')' after tuple pattern")) {
      return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
    }

    BindingPat b = (BindingPat){
        .kind = BIND_TUPLE,
        .span = span_merge(token_span(start_tok), previous_tok_span(p)),
        .as.tuple.names = al_alloc(p->al, sizeof(StringView) * count),
        .as.tuple.count = count,
    };
    memcpy(b.as.tuple.names, names, sizeof(StringView) * count);
    return b;
  }

  error_at(p, current_tok_span(p), "expected identifier in binding pattern");
  return (BindingPat){.kind = BIND_POISON, .span = current_tok_span(p)};
}

static TypeNode *parse_type(Parser *p) {
  TypeNode *base = NULL;

  if (match_tok(p, TOKEN_LPAREN)) {
    if (match_tok(p, TOKEN_RPAREN)) {
      // unit type
      return ast_type_node(
          TYNODE_UNIT, span_merge(previous_tok_span(p), previous_tok_span(p)),
          p->al);
    }

    // tuple type
    TypeNode *elem_types[16];
    int elem_count = 0;
    bool had_error = false;

    do {
      if (elem_count >= 16) {
        error_at(p, current_tok_span(p), "too many types in tuple");
        had_error = true;
        break;
      }
      TypeNode *ty = parse_type(p);
      if (ty->kind == TYNODE_POISON) {
        had_error = true;
        break;
      }
      elem_types[elem_count++] = ty;
    } while (match_tok(p, TOKEN_COMMA));

    if (had_error) {
      return ast_type_node(TYNODE_POISON, current_tok_span(p), p->al);
    }

    if (!consume_tok(p, TOKEN_RPAREN, "expected ')' after tuple type")) {
      return ast_type_node(TYNODE_POISON, current_tok_span(p), p->al);
    }

    if (elem_count == 1) {
      return elem_types[0];
    }

    base = ast_type_node(
        TYNODE_TUPLE, span_merge(token_span(peek_tok(p)), previous_tok_span(p)),
        p->al);
    base->as.tuple.elems = al_alloc(p->al, sizeof(TypeNode *) * elem_count);
    memcpy(base->as.tuple.elems, elem_types, sizeof(TypeNode *) * elem_count);
    base->as.tuple.count = elem_count;
  }

  if (match_tok(p, TOKEN_FUN)) {
    Token start = *previous_tok(p);
    consume_tok(p, TOKEN_LPAREN, "expected '(' after 'fun' in type");

    TypeNode *param_types[16];
    int param_count = 0;
    bool had_error = false;

    if (!check_tok(p, TOKEN_RPAREN)) {
      do {
        if (param_count >= 16) {
          error_at(p, current_tok_span(p),
                   "too many parameters in function type");
          had_error = true;
          break;
        }
        TypeNode *ty = parse_type(p);
        if (ty->kind == TYNODE_POISON) {
          had_error = true;
          break;
        }
        param_types[param_count++] = ty;
      } while (match_tok(p, TOKEN_COMMA));
    }

    if (!consume_tok(p, TOKEN_RPAREN,
                     "expected ')' after function type parameters")) {
      had_error = true;
    }

    if (!match_tok(p, TOKEN_THIN_ARROW)) {
      error_at(p, current_tok_span(p),
               "expected '->' after function type parameters");
      had_error = true;
    }

    TypeNode *return_type = parse_type(p);
    if (return_type->kind == TYNODE_POISON) {
      had_error = true;
    }

    if (had_error) {
      return ast_type_node(TYNODE_POISON,
                           span_merge(token_span(&start), previous_tok_span(p)),
                           p->al);
    }

    base = ast_type_node(TYNODE_FUN,
                         span_merge(token_span(&start), previous_tok_span(p)),
                         p->al);

    base->as.fun.param_count = param_count;
    base->as.fun.param_types =
        al_alloc(p->al, sizeof(TypeNode *) * param_count);
    memcpy(base->as.fun.param_types, param_types,
           sizeof(TypeNode *) * param_count);
    base->as.fun.return_type = return_type;
  }

  if (match_tok(p, TOKEN_SELF_TYPE)) {
    base = ast_type_node(TYNODE_SELF, token_span(previous_tok(p)), p->al);
  }

  if (check_tok(p, TOKEN_IDENT)) {
    Token start = *current_tok(p);

    Path path = {0};
    if (!parse_path(p, PATH_TYPE, &path)) {
      return ast_type_node(TYNODE_POISON, current_tok_span(p), p->al);
    }

    base = ast_type_node(TYNODE_NAMED,
                         span_merge(token_span(&start), previous_tok_span(p)),
                         p->al);
    base->as.named.path = path;
  }

  if (match_tok(p, TOKEN_DOT)) {
    do {
      if (!consume_tok(p, TOKEN_IDENT,
                       "expected associated type name after '.'")) {
        return ast_type_node(TYNODE_POISON, current_tok_span(p), p->al);
      }
      Token name = *previous_tok(p);

      TypeNode *assoc = ast_type_node(
          TYNODE_ASSOC, span_merge(base->span, token_span(&name)), p->al);
      assoc->as.assoc.base = base;
      assoc->as.assoc.assoc_name = name.lexeme;
      base = assoc;
    } while (match_tok(p, TOKEN_DOT));
  }

  if (base) {
    return base;
  }

  error_at(p, current_tok_span(p), "expected type");
  return ast_type_node(TYNODE_POISON, current_tok_span(p), p->al);
}

static int parse_type_args(Parser *p, TypeNode ***out_args);

static bool parse_path(Parser *p, PathParseMode mode, Path *out) {
  PathSegment segments[8];
  int segment_count = 0;
  Token *start_tok = current_tok(p);

  if (check_tok(p, TOKEN_IDENT)) {
    do {
      if (segment_count >= 8) {
        error_at(p, current_tok_span(p), "too many segments in path");
        return false;
      }
      if (mode == PATH_USE && check_tok(p, TOKEN_LBRACE)) {
        break;
      }
      if (!consume_tok(p, TOKEN_IDENT, "expected identifier in path")) {
        return false;
      }
      PathSegment *segment = &segments[segment_count++];
      *segment = (PathSegment){
          .name = previous_tok(p)->lexeme,
          .type_arg_count = 0,
          .type_args = NULL,
      };

      if (mode == PATH_EXPR) {
        // expr requires '::' before type args
        if (check_tok(p, TOKEN_COLONCOLON) &&
            peek_ahead(p, 1)->type == TOKEN_LT) {
          advance_tok(p); // consume '::'
          segment->type_arg_count = parse_type_args(p, &segment->type_args);
          if (segment->type_arg_count < 0) {
            return false;
          }
        }
      } else {
        // '::' is optional
        if (check_tok(p, TOKEN_COLONCOLON) &&
            peek_ahead(p, 1)->type == TOKEN_LT) {
          advance_tok(p);
        }

        if (check_tok(p, TOKEN_LT)) {
          segment->type_arg_count = parse_type_args(p, &segment->type_args);
          if (segment->type_arg_count < 0) {
            return false;
          }
        }
      }
    } while (match_tok(p, TOKEN_COLONCOLON));
  }

  assert(out);
  out->segments = al_alloc(p->al, sizeof(PathSegment) * segment_count);
  memcpy(out->segments, segments, sizeof(PathSegment) * segment_count);
  out->count = segment_count;
  out->span = span_merge(token_span(start_tok), previous_tok_span(p));

  return true;
}

static Expr *parse_assign(Parser *p);
static Expr *parse_range(Parser *p);
static Expr *parse_or(Parser *p);
static Expr *parse_and(Parser *p);
static Expr *parse_equality(Parser *p);
static Expr *parse_comparison(Parser *p);
static Expr *parse_addition(Parser *p);
static Expr *parse_multiply(Parser *p);
static Expr *parse_unary(Parser *p);
static Expr *parse_postfix(Parser *p);
static Expr *parse_primary(Parser *p);

static Expr *parse_expr(Parser *p) { return parse_assign(p); }

static Expr *parse_assign(Parser *p) {
  Expr *lhs = parse_range(p);
  if (lhs->kind == EXPR_POISON) {
    return lhs;
  }

  if (match_tok(p, TOKEN_EQ) || match_tok(p, TOKEN_PLUSEQ) ||
      match_tok(p, TOKEN_MINUSEQ) || match_tok(p, TOKEN_STAREQ) ||
      match_tok(p, TOKEN_SLASHEQ)) {
    Token *op = previous_tok(p);
    Expr *rhs = parse_assign(p);
    if (rhs->kind == EXPR_POISON) {
      return rhs;
    }

    Expr *e = ast_expr(EXPR_ASSIGN, span_merge(lhs->span, rhs->span), p->al);
    e->as.assign.target = lhs;
    e->as.assign.value = rhs;
    e->as.assign.op = op->type;
    return e;
  }

  return lhs;
}

static Expr *parse_range(Parser *p) {
  Expr *lhs = parse_or(p);
  if (lhs->kind == EXPR_POISON) {
    return lhs;
  }

  if (match_tok(p, TOKEN_DOTDOT) || match_tok(p, TOKEN_DOTDOTEQ)) {
    Token *op = previous_tok(p);
    Expr *rhs = parse_or(p);
    if (rhs->kind == EXPR_POISON) {
      return rhs;
    }

    Expr *e = ast_expr(EXPR_RANGE, span_merge(lhs->span, rhs->span), p->al);
    e->as.range.start = lhs;
    e->as.range.end = rhs;
    e->as.range.inclusive = op->type == TOKEN_DOTDOTEQ;
    return e;
  }

  return lhs;
}

static Expr *parse_binary_left(Parser *p, Expr *(*sub)(Parser *),
                               const TokenType *ops) {
  Expr *lhs = sub(p);
  while (true) {
    bool matched = false;
    for (int i = 0; ops[i]; i++) {
      if (!match_tok(p, ops[i])) {
        continue;
      }
      Token *op = previous_tok(p);
      Expr *rhs = sub(p);
      Span span = span_merge(lhs->span, rhs->span);
      Expr *expr = ast_expr(EXPR_BINARY, span, p->al);
      expr->as.binary.left = lhs;
      expr->as.binary.right = rhs;
      expr->as.binary.op = op->type;
      lhs = expr;
      matched = true;
      break;
    }
    if (!matched) {
      break;
    }
  }
  return lhs;
}

static Expr *parse_or(Parser *p) {
  static const TokenType ops[] = {TOKEN_OR, 0};
  return parse_binary_left(p, parse_and, ops);
}

static Expr *parse_and(Parser *p) {
  static const TokenType ops[] = {TOKEN_AND, 0};
  return parse_binary_left(p, parse_equality, ops);
}

static Expr *parse_equality(Parser *p) {
  static const TokenType ops[] = {TOKEN_EQEQ, TOKEN_BANGEQ, 0};
  return parse_binary_left(p, parse_comparison, ops);
}

static Expr *parse_comparison(Parser *p) {
  static const TokenType ops[] = {TOKEN_LT, TOKEN_LTEQ, TOKEN_GT, TOKEN_GTEQ,
                                  0};
  return parse_binary_left(p, parse_addition, ops);
}

static Expr *parse_addition(Parser *p) {
  static const TokenType ops[] = {TOKEN_PLUS, TOKEN_MINUS, 0};
  return parse_binary_left(p, parse_multiply, ops);
}

static Expr *parse_multiply(Parser *p) {
  static const TokenType ops[] = {TOKEN_STAR, TOKEN_SLASH, TOKEN_PERCENT, 0};
  return parse_binary_left(p, parse_unary, ops);
}

static Expr *parse_unary(Parser *p) {
  if (match_tok(p, TOKEN_NOT) || match_tok(p, TOKEN_MINUS)) {
    Token *op = previous_tok(p);
    Expr *operand = parse_unary(p);
    Span span = span_merge(token_span(op), operand->span);
    Expr *expr = ast_expr(EXPR_UNARY, span, p->al);
    expr->as.unary.op = op->type;
    expr->as.unary.operand = operand;
    return expr;
  }
  return parse_postfix(p);
}

static Expr *parse_postfix(Parser *p) {
  Expr *base = parse_primary(p);
  while (true) {
    if (match_tok(p, TOKEN_LPAREN)) {
      Expr *args[16];
      int argc = 0;
      if (!check_tok(p, TOKEN_RPAREN)) {
        do {
          if (argc >= 16) {
            error_at(p, current_tok_span(p), "too many arguments");
            break;
          }
          args[argc++] = parse_expr(p);
        } while (match_tok(p, TOKEN_COMMA));
      }
      consume_tok(p, TOKEN_RPAREN, "expected ')' after arguments");
      Expr **arg_array = al_alloc(p->al, sizeof(Expr *) * argc);
      memcpy(arg_array, args, sizeof(Expr *) * argc);
      Span span = span_merge(base->span, previous_tok_span(p));
      Expr *expr = ast_expr(EXPR_CALL, span, p->al);
      expr->as.call.callee = base;
      expr->as.call.args = arg_array;
      expr->as.call.arg_count = argc;
      base = expr;
    } else if (match_tok(p, TOKEN_DOT)) {
      if (match_tok(p, TOKEN_IDENT)) {
        Token name = *previous_tok(p);

        TypeNode *type_args[8];
        int type_arg_count = 0;
        Span start_span = current_tok_span(p);

        if (match_tok(p, TOKEN_LT)) {
          bool had_error = false;

          if (!check_tok(p, TOKEN_GT)) {
            do {
              if (type_arg_count >= 8) {
                error_at(p, span_merge(start_span, previous_tok_span(p)),
                         "too many type arguments in method call");
                had_error = true;
                break;
              }
              TypeNode *ty = parse_type(p);
              if (ty->kind == TYNODE_POISON) {
                had_error = true;
                break;
              }
              type_args[type_arg_count++] = ty;
            } while (match_tok(p, TOKEN_COMMA));
          }

          consume_tok(p, TOKEN_GT, "expected '>' after type arguments");

          if (type_arg_count == 0) {
            error_at(p, current_tok_span(p),
                     "expected at least one type argument in type application");
            had_error = true;
          }

          if (had_error) {
            return ast_expr(EXPR_POISON, current_tok_span(p), p->al);
          }
        }

        if (type_arg_count != 0 && !check_tok(p, TOKEN_LPAREN)) {
          error_at(p, span_merge(start_span, previous_tok_span(p)),
                   "unexpected type arguments");
        }

        if (match_tok(p, TOKEN_LPAREN)) {
          // method call: obj.method(args)
          Expr **args = NULL;
          int argc = 0;
          if (!check_tok(p, TOKEN_RPAREN)) {
            Expr *tmp[64];
            argc = 0;
            do {
              tmp[argc++] = parse_expr(p);
            } while (match_tok(p, TOKEN_COMMA) && !check_tok(p, TOKEN_RPAREN));
            args = al_alloc(p->al, sizeof(Expr *) * argc);
            memcpy(args, tmp, sizeof(Expr *) * argc);
          }
          consume_tok(p, TOKEN_RPAREN, "expected ')' after arguments");
          Expr *expr =
              ast_expr(EXPR_METHOD_CALL,
                       span_merge(base->span, previous_tok_span(p)), p->al);

          expr->as.method_call.object = base;
          expr->as.method_call.method_name = name.lexeme;
          expr->as.method_call.args = args;
          expr->as.method_call.arg_count = argc;
          expr->as.method_call.type_args = NULL;
          expr->as.method_call.type_arg_count = 0;
          expr->as.method_call.resolved_method = NULL;
          if (type_arg_count > 0) {
            expr->as.method_call.type_args =
                al_alloc(p->al, sizeof(TypeNode *) * type_arg_count);
            memcpy(expr->as.method_call.type_args, type_args,
                   sizeof(TypeNode *) * type_arg_count);
            expr->as.method_call.type_arg_count = type_arg_count;
          }
          base = expr;
        } else {
          // field access: obj.field
          Expr *expr = ast_expr(
              EXPR_FIELD, span_merge(base->span, previous_tok_span(p)), p->al);
          expr->as.field.object = base;
          expr->as.field.ident.name = name.lexeme;
          expr->as.field.resolved_index = -1;
          base = expr;
        }
      } else if (match_tok(p, TOKEN_INT)) {
        // tuple struct constructor: Point.0, Point.1, etc.
        Token idx_tok = *previous_tok(p);
        int idx = atoi(idx_tok.lexeme.chars);
        Expr *expr = ast_expr(
            EXPR_FIELD, span_merge(base->span, previous_tok_span(p)), p->al);
        expr->as.field.object = base;
        expr->as.field.is_tuple = true;
        expr->as.field.ident.index = idx;
        expr->as.field.resolved_index = -1;
        base = expr;
      } else {
        error_at(p, current_tok_span(p),
                 "expected field name or tuple index after '.'");
        return ast_expr(EXPR_POISON, current_tok_span(p), p->al);
      }
    } else if (match_tok(p, TOKEN_LBRACKET)) {
      // Index: arr[i]
      Expr *idx = parse_expr(p);
      consume_tok(p, TOKEN_RBRACKET, "expected ']'");
      Expr *expr = ast_expr(
          EXPR_INDEX, span_merge(base->span, previous_tok_span(p)), p->al);
      expr->as.index.object = base;
      expr->as.index.index = idx;
      base = expr;

    } else if (match_tok(p, TOKEN_QUESTION)) {
      // Propagate: expr?
      Expr *expr = ast_expr(
          EXPR_PROPAGATE, span_merge(base->span, previous_tok_span(p)), p->al);
      expr->as.propagate.operand = base;
      base = expr;

    } else if (match_tok(p, TOKEN_AS)) {
      // cast: expr as type
      TypeNode *target = parse_type(p);
      Expr *expr = ast_expr(
          EXPR_CAST, span_merge(base->span, previous_tok_span(p)), p->al);
      expr->as.cast.operand = base;
      expr->as.cast.target_type = target;
      base = expr;

    } else {
      break;
    }
  }
  return base;
}

static Stmt *parse_stmt(Parser *p);

static bool is_pure_stmt(Parser *p) {
  return check_tok(p, TOKEN_VAR) || check_tok(p, TOKEN_RETURN) ||
         check_tok(p, TOKEN_BREAK) || check_tok(p, TOKEN_CONTINUE);
}

static Expr *parse_block(Parser *p) {
  if (!consume_tok(p, TOKEN_LBRACE, "expected '{'")) {
    return ast_expr(EXPR_POISON, current_tok_span(p), p->al);
  };
  Span start_span = previous_tok_span(p);

  Stmt *tmp_stmts[256];
  int stmt_count = 0;
  Expr *tail = NULL;
  bool block_had_error = false;

  while (!check_tok(p, TOKEN_RBRACE) && !is_at_end(p)) {
    if (tail) {
      // something came after the tail expr — error, but keep parsing
      error_at(p, current_tok_span(p), "expected '}' after block expression");
      block_had_error = true;
    }

    if (is_pure_stmt(p)) {
      Stmt *stmt = parse_stmt(p);
      if (stmt->kind == STMT_POISON) {
        block_had_error = true;
      } else {
        assert(stmt_count < 256 && "too many statements in block");
        tmp_stmts[stmt_count++] = stmt;
      }
    } else {
      Expr *expr = parse_expr(p);
      if (expr->kind == EXPR_POISON) {
        advance_tok(p);
        block_had_error = true;
      } else if (match_tok(p, TOKEN_SEMICOLON)) {
        Stmt *stmt = ast_stmt(STMT_EXPR, expr->span, p->al);
        stmt->as.expr_stmt.expr = expr;
        assert(stmt_count < 256 && "too many statements in block");
        tmp_stmts[stmt_count++] = stmt;
      } else {
        tail = expr;
      }
    }

    if (p->panic_mode) {
      sync_to_stmt(p);
    }
  }

  if (!consume_tok(p, TOKEN_RBRACE, "expected '}'")) {
    return ast_expr(EXPR_POISON, current_tok_span(p), p->al);
  }

  if (block_had_error) {
    return ast_expr(EXPR_POISON, span_merge(start_span, previous_tok_span(p)),
                    p->al);
  }

  Expr *expr =
      ast_expr(EXPR_BLOCK, span_merge(start_span, previous_tok_span(p)), p->al);
  expr->as.block.stmts = al_alloc(p->al, sizeof(Stmt *) * stmt_count);
  memcpy(expr->as.block.stmts, tmp_stmts, sizeof(Stmt *) * stmt_count);
  expr->as.block.stmt_count = stmt_count;
  expr->as.block.tail_expr = tail;
  return expr;
}

static int parse_type_args(Parser *p, TypeNode ***out_args) {
  TypeNode *args[16];
  int count = 0;
  bool had_error = false;

  if (!consume_tok(p, TOKEN_LT, "expected '<' before type arguments")) {
    had_error = true;
  } else if (!check_tok(p, TOKEN_GT)) {
    do {
      if (count >= 16) {
        error_at(p, current_tok_span(p), "too many type arguments");
        had_error = true;
        break;
      }
      TypeNode *ty = parse_type(p);
      if (ty->kind == TYNODE_POISON) {
        had_error = true;
        break;
      }
      args[count++] = ty;
    } while (match_tok(p, TOKEN_COMMA));

    if (!consume_tok(p, TOKEN_GT, "expected '>' after type arguments")) {
      had_error = true;
    }
  }
